--- a/src/app/features/admin/pages/researcher-management/researcher-management.component.scss
+++ b/src/app/features/admin/pages/researcher-management/researcher-management.component.scss
@@ -623,6 +623,15 @@
                 background-color: #EF4444;
             }
         }
+
+        &.approved {
+            background-color: #DCFCE7;
+            color: #166534;
+
+            .dot {
+                background-color: #22C55E;
+            }
+        }
     }
 
     /* Review Button */
@@ -675,6 +684,11 @@
             background-color: #F1F5F9;
             color: #64748B;
             cursor: not-allowed;
+        }
+
+        &.input-error {
+            border-color: #EF4444 !important;
+            background-color: #FEF2F2;
         }
     }
 
